<resources>
    <string name="app_name">Shape</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="registrarse">Registrarse</string>
    <string name="atr_s">Atrás</string>
    <string name="escribe_tu_correo">Escribe tu correo</string>
    <string name="escribe_tu_contrase_a">Escribe tu contraseña</string>
    <string name="olvidaste_la_contrase_a">¿Olvidaste la contraseña?</string>
    <string name="reg_strate_y_dale_forma_a_tu_idea">Regístrate y dale forma a tu idea</string>
    <string name="rellena_el_siguiente_formulario_y_bten_tu_ruta_a_seguir">Rellena el siguiente formulario y óbten tu ruta a seguir</string>
    <string name="escribe_tu_nombre">Nombre</string>
    <string name="en_qu_etapa_est_s">¿En qué etapa estás?</string>
    <string name="escribe_tu_correo_electr_nico">Escribe tu correo electrónico</string>
    <string name="establece_una_contrase_a">Establece una contraseña</string>
    <string name="confirma_la_contrase_a">Confirma la contraseña</string>
    <string name="acepta_la_pol_tica_de_privacidad">Acepta la política de privacidad</string>
    <string name="escribe_tu_apellido">Apellido</string>
    <string name="imagen_de_perfil">Imagen de perfil</string>
    <string name="nombre">Nombre:</string>
    <string name="correo">Correo:</string>
    <string name="menu">Menu</string>
    <string name="aceptar_el_reto">Aceptar el reto</string>
    <string name="beneficios">beneficio</string>
    <string name="objectivo">Objectivo:</string>
    <string name="duraci_n">Duración:</string>
    <string name="categor_a">Categoría:</string>
    <string name="leer_resumen">Leer resumen</string>
    <string name="mensaje">Bienvenid@ a Shape</string>
    <string name="retoTitle">Retos diarios</string>
    <string name="retoDescription">Haz tu reto del emprendedor del dia</string>
    <string name="retoButton">Ir a mis retos</string>
    <string name="evaluaTitle">Evalúa tu idea</string>
    <string name="evaluaDescription">Comparte tu idea y recibe comentarios para mejorarla</string>
    <string name="evaluaButton">Compartir mi idea</string>
    <string name="inspirateTitle">Inspírate</string>
    <string name="inspirateDescription">Conoce casos de éxito, escucha podcasts y encuentra información relevante</string>
    <string name="inspirateButton">Ir a casos de éxito</string>
    <string name="herramientasTitle">Descubre herramientas</string>
    <string name="herramientasDescription">Existen muchas soluciones para emprendedores, conócelas:</string>
    <string name="herramientasButton">Descubrir</string>
    <string name="networkingTitle">Networking cerca de ti</string>
    <string name="networkingDescription">Descubre próximos eventos para conectar con emprendedores como tú</string>
    <string name="networkingButton">Ver eventos</string>
    <string name="lienzosTitle">Lienzos Shape</string>
    <string name="lienzosDescription">Usa nuestros lienzos y dale forma a tu idea</string>
    <string name="lienzosButton">Ir a lienzos</string>
    <string name="concentrateTitle">Concéntrate y logra tu objetivo</string>
    <string name="concentrateDescription">Entra al espacio mindfulness </string>
    <string name="concentrateButton">Concentrarme</string>
    <string name="subvencionTitle">Listado de subvenciones</string>
    <string name="subvencionDescription">Conoce convocatorias para levantar capital para tu emprendimiento</string>
    <string name="subvencionButton">Ver más</string>
    <string name="casosTitle">Casos de éxito</string>
    <string name="casosDescription">Descubre casos de éxito en diferentes industrias e inspírate para darle forma a tu idea.</string>
    <string name="podcastTitle">Podcasts</string>
    <string name="posdcastDescription">Encuentra podcasts con entrevistas a emprendedores y personas creativas, aprende de ellos y ponte manos a la obra.</string>
    <string name="frasesTitle">Frases de emprendedores</string>
    <string name="frasesDescription">Encuentra la motivación para seguir adelante con tu proyecto y conecta con la filosofía emprendedora.</string>
    <string name="botonInspirate">Descubrir</string>
    <string name="titulo">Evalúa tu idea, preguntando a posibles clientes y personas interesadas:</string>
    <string name="describir">Describe tu producto en un tweet:</string>
    <string name="web">Ingresa tu sitio web o redes sociales</string>
    <string name="foto">Sube fotografías que describan tu idea:</string>
    <string name="titulo2">Envía las siguientes preguntas y recibe retroalimentación:</string>
    <string name="preg1">¿Te parece interesante nuestra propuesta de valor?</string>
    <string name="preg2">¿Adquirirías este producto?</string>
    <string name="preg3">¿Te gustaría probar nuestro servicio?</string>
    <string name="leanTitle">The Lean Startup, Eric Ries</string>
    <string name="leanDescription">Un libro sobre cómo los emprendedores de hoy en día utilizan la innovación continua para crear negocios radicalmente exitosos.</string>
    <string name="habitosTitle">7 hábitos de la gente altamente efectiva, Stephen R. Covey</string>
    <string name="habitosDescription">Un libro sobre los hábitos que pueden transformar la forma en que piensas y actúas en la vida y en los negocios.</string>
    <string name="eMythTitle">The E-Myth Revisited, Michael E. Gerber</string>
    <string name="eMythDescription">Un libro sobre cómo los emprendedores de hoy en día utilizan la innovación continua para crear negocios radicalmente exitosos.</string>
    <string name="zeroTitle">Zero to One, Peter Thiel y Blake Masters</string>
    <string name="zeroDescription">Un libro que muestra cómo construir algo nuevo y valioso a partir de la nada, en lugar de simplemente copiar lo que ya existe.</string>
    <string name="goodTitle">Good to Great, Jim Collins</string>
    <string name="goodDescription">Un libro que analiza por qué algunas empresas sobresalen mientras que otras no lo hacen, y qué hacen las empresas sobresalientes para lograrlo.</string>
    <string name="hourTitle">The 4-Hour Work Week, Timothy Ferriss</string>
    <string name="hourDescription">Un libro que muestra cómo escapar de la rutina diaria y crear un estilo de vida más gratificante, al mismo tiempo que se construye un negocio exitoso.</string>
    <string name="thinkTitle">Think and Grow Rich, Napoleon Hill</string>
    <string name="thinkDescription">Un libro sobre cómo el pensamiento positivo y el enfoque en los objetivos pueden ayudar a las personas a alcanzar el éxito financiero y personal.</string>
    <string name="botonBiblioteca">Leer resumen</string>
    <string name="qu_mejorar_as_de_este_producto">¿Qué mejorarías de este producto?</string>
    <string name="siguiente">Siguiente</string>
    <string name="titulo32">titulo</string>
    <string name="ve">ve</string>
    <string name="ver_caso_de_xito">Ver caso de éxito</string>
    <string name="frases_que_inspirar">Frases que inspirar</string>
    <string name="descubre_hermitages_tiles_para_dar_forma_a_tu_proyecto">Descubre hermitages útiles para dar forma a tu proyecto</string>
    <string name="inteligencia_artificial">Inteligencia Artificial</string>
    <string name="dise_o">Diseño</string>
    <string name="redes_sociales">Redes Sociales</string>
    <string name="prototipado">Prototipado</string>
    <string name="gesti_n_de_proyectos">Gestión de Proyectos</string>
    <string name="mensajeHerramientas">Descubre herramientas útiles para dar forma a tu proyecto</string>
    <string name="canvaTitle">Canva</string>
    <string name="canvaDescription">Esta herramienta te ayudará a crear diseños personalizados.</string>
    <string name="hootsuiteTitle">Hootsuite</string>
    <string name="hootsuiteDescription">Esta herramienta te ayudará a gestionar tus redes sociales.</string>
    <string name="slackTitle">Slack</string>
    <string name="slackDescription">Esta herramienta te ayudará a enviar mensajes a tu equipo.</string>
    <string name="chatgptTitle">ChatGPT</string>
    <string name="chatgptDescription">Esta herramienta te ayudará con inteligencia artificial.</string>
    <string name="dalleTitle">DALL-E</string>
    <string name="dalleDescription">De texto a imagen con inteligencia artificial.</string>
    <string name="beautifulaiTitle">Beautiful ai</string>
    <string name="beautifulaiDescription">Crea presentaciones con inteligencia artificial.</string>
    <string name="botonHerramientas">Descubrir</string>
    <string name="descubrir">Descubrir</string>
    <string name="saber_m_s">Saber más</string>
    <string name="nightsTitle">Networking Nights</string>
    <string name="nightsDescription">Sé parte de este evento en Bilbao.</string>
    <string name="comedyTitle">Entrepreneurship Comedy</string>
    <string name="comedyDescription">Sé parte de este evento en Bilbao.</string>
    <string name="pitchDeckTitle">Master Class - Pitch Deck</string>
    <string name="pitchDeckDescription">Sé parte de este evento en Bilbao.</string>
    <string name="botonNetworking">Saber más</string>
    <string name="businessTitle">Business Model Canvas</string>
    <string name="businessDescription">Usa nuestro lienzo para aprender a prototipar tus proyectos y ponlo en marcha.</string>
    <string name="businessButton">Lienzo Modelo de Negocio</string>
    <string name="pitchTitle">Lienzo Visión</string>
    <string name="pitchDescription">Prepara el pitch perfecto para presentar tu idea y llamar la atención de tu audiencia.</string>
    <string name="pitchButton">Probar plantilla pitch deck</string>
    <string name="propuestaTitle">Lienzo de propuesta de valor</string>
    <string name="propuestaDescription">Identifica dolores y alegráis de tu público objetivo para crear el producto perfecto.</string>
    <string name="propuestaButton">Lienzo Propuesta de valor</string>
    <string name="notificacionesTitle">Desactiva tus notificaciones</string>
    <string name="notificacionesDescription">Concéntrate y evita tus notificaciones por 5, 10 o 20 minutos.</string>
    <string name="notificacionesButton">Silenciar mis notificaciones</string>
    <string name="respiroTitle">Date un respiro</string>
    <string name="respiroDescription">Activa el cronómetro y respira consciente durante 1, 3 o 5 minutos.</string>
    <string name="respiroButton">Respirar</string>
    <string name="title_activity_biblioteca_main">BibliotecaMainActivity</string>
    <string name="emprendedorTitle">Premio Emprendedor Del Año</string>
    <string name="emprendedorDescription">Bienvenidas las ideas en desarrollo y en etapa de crecimiento.</string>
    <string name="nombre_del_usuario">Nombre Del Usuario</string>
    <string name="idea_planteda">Idea planteda: </string>
    <string name="imagen_post">Imagen Post</string>
    <string name="comentarios">Comentarios</string>
    <string name="enviar_feebback">Enviar Feebback</string>
    <string name="bajar">Bajar</string>
    <string name="ver_lienzos">Ver lienzos</string>
    <string name="forgot_password">FORGOT PASSWORD</string>
    <string name="necesitamos_que_introduzcas_tu_correo_para_enviarte_intrucciones_para_el_cambiar_la_contrase_a">Necesitamos que introduzcas tu correo para enviarte intrucciones para el cambiar la contraseña</string>
    <string name="introduce_tu_correo">Introduce tu correo</string>
    <string name="enviar">Enviar</string>
    <string name="atras">Atrás</string>
    <string name="lock">lock</string>
    <string name="cambiar_contrase_a">CAMBIAR    CONTRASEÑA</string>
    <string name="recuerda_poner_correctamente_tu_contrase_a_actual">Recuerda poner correctamente tu contraseña actual</string>
    <string name="introduce_tu_contrase_a_actual">Introduce tu contraseña actual</string>
    <string name="tu_nueva_contrase_a">Tu nueva contraseña</string>
    <string name="confirma_tu_contrase_a_nueva">Confirma tu contraseña nueva</string>
</resources>