<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        app:srcCompat="@drawable/lock"
        app:tint="@color/blue"
        android:contentDescription="@string/lock" />

    <TextView
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:text="@string/forgot_password"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textColor="@color/blue"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/necesitamos_que_introduzcas_tu_correo_para_enviarte_intrucciones_para_el_cambiar_la_contrase_a"
        android:textColor="@color/black"
        android:gravity="center"/>

    <EditText
        android:id="@+id/emailForgotPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:drawableStart="@drawable/email"
        android:background="@drawable/edit_text_form"
        android:drawablePadding="5dp"
        android:drawableTint="@color/blue"
        android:hint="@string/introduce_tu_correo"
        android:autofillHints="emailAddress"
        android:inputType="textEmailAddress"
        tools:ignore="TextFields" />

    <Button
        android:id="@+id/emailSend"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:text="@string/enviar"
        android:textColor="@color/white"
        android:backgroundTint="@color/blue"
        android:textStyle="bold"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnBack"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/atras"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:textStyle="bold"
        android:backgroundTint="@android:color/transparent"
        app:cornerRadius="12dp"
        app:strokeWidth="2dp"
        app:strokeColor="@color/blue"
        android:paddingVertical="8dp"
        android:paddingHorizontal="16dp"/>
</LinearLayout>
