<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        app:srcCompat="@drawable/lock_open"
        app:tint="@color/blue"
        android:contentDescription="@string/lock" />

    <TextView
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:text="@string/cambiar_contrase_a"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textColor="@color/blue"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/recuerda_poner_correctamente_tu_contrase_a_actual"
        android:textColor="@color/black"
        android:gravity="center"/>

    <EditText
        android:id="@+id/currentPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="20sp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:drawableStart="@drawable/lock"
        android:background="@drawable/edit_text_form"
        android:drawablePadding="5dp"
        android:inputType="textPassword"

        android:drawableTint="@color/blue"
        android:hint="@string/introduce_tu_contrase_a_actual"
        android:autofillHints=""
        tools:ignore="TextFields" />
    <EditText
        android:id="@+id/newPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="20sp"
        android:paddingStart="10dp"
        android:inputType="textPassword"

        android:paddingEnd="10dp"
        android:drawableStart="@drawable/lock"
        android:background="@drawable/edit_text_form"
        android:drawablePadding="5dp"
        android:drawableTint="@color/blue"
        android:hint="@string/tu_nueva_contrase_a"
        android:autofillHints=""
        tools:ignore="TextFields" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20sp"/>
    <EditText
        android:id="@+id/confirmPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="20sp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:drawableStart="@drawable/lock"
        android:background="@drawable/edit_text_form"
        android:drawablePadding="5dp"
        android:drawableTint="@color/blue"
        android:hint="@string/confirma_tu_contrase_a_nueva"
        android:autofillHints=""
        android:inputType="textPassword"

        tools:ignore="TextFields" />

    <Button
        android:id="@+id/changePassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="20sp"
        android:text="@string/cambiar_contrase_a"
        android:textColor="@color/white"
        android:backgroundTint="@color/blue"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/atras"
        android:textStyle="bold"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:gravity="bottom|center"/>


</LinearLayout>