<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round"
        android:elevation="1dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/imagenPerfil"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                android:src="@android:drawable/sym_def_app_icon"
                app:layout_constraintDimensionRatio="H,1:1"
                app:shapeAppearanceOverlay="@style/radius2" />

            <TextView
                android:id="@+id/nombreUser"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center|start"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="15dp"
                android:text="@string/nombre_del_usuario"
                android:textColor="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end">

                <Button
                    android:visibility="gone"
                    android:id="@+id/btnVerLienzos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/black"
                    android:text="@string/ver_lienzos"
                    android:textAllCaps="false" />

            </LinearLayout>


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#BCBCBC" />


        <ImageView
            android:id="@+id/imagenPost"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:contentDescription="@string/imagen_post"
            android:visibility="gone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:padding="5dp"
            android:text="@string/idea_planteda"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="italic" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/idea"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/idea_planteda"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="italic" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end">

            <ImageButton
                android:id="@+id/downfeedback"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/bajar"
                android:scaleType="centerCrop"
                android:src="@drawable/down"
                app:layout_constraintDimensionRatio="H,1:1" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/answersLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <CheckBox
                android:id="@+id/answer1CheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/preg1" />

            <CheckBox
                android:id="@+id/answer2CheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/preg2" />

            <CheckBox
                android:id="@+id/answer3CheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/preg3" />

            <Button
                android:id="@+id/btnEnviarFeedback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/blue"
                android:text="@string/enviar_feebback"
                android:textAllCaps="false" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!--<ImageButton
                android:id="@+id/postFav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/favorito"
                android:src="@drawable/ic_favourite" />-->

            <ImageButton
                android:id="@+id/commentSection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/comentarios"
                android:src="@drawable/comment" />

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>