<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_herramientas">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="15dp"
        android:paddingTop="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:text="@string/descubre_hermitages_tiles_para_dar_forma_a_tu_proyecto"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="30dp"
                android:layout_height="wrap_content" />

            <ImageButton
                android:id="@+id/arrow_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/white"
                android:contentDescription="atr"
                android:src="@drawable/arrow_back_black" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnIA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/black"
                    app:cornerRadius="12dp"
                    android:textAllCaps="false"
                    android:text="@string/inteligencia_artificial" />

                <Space
                    android:layout_width="10dp"
                    android:layout_height="0dp" />

                <Button
                    android:id="@+id/desing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/black"
                    app:cornerRadius="12dp"
                    android:textAllCaps="false"
                    android:text="@string/dise_o" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/socialNetwork"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/black"
                    app:cornerRadius="12dp"
                    android:textAllCaps="false"
                    android:text="@string/redes_sociales" />

                <Space
                    android:layout_width="10dp"
                    android:layout_height="0dp" />

                <Button
                    android:id="@+id/proto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/black"
                    app:cornerRadius="12dp"
                    android:textAllCaps="false"
                    android:text="@string/prototipado" />
            </LinearLayout>

            <Button
                android:id="@+id/project"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black"
                app:cornerRadius="12dp"
                android:textAllCaps="false"
                android:text="@string/gesti_n_de_proyectos" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <LinearLayout
            android:id="@+id/contenedor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

    </LinearLayout>

</ScrollView>
